panko-compiletest/src/snapshots/panko_compiletest__layout-panko__tests__cases__execute__call__test_simple_varargs.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=layout"
    - "--stop-after=layout"
    - panko/tests/cases/execute/call/test_simple_varargs.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit
   (declaration (printf~0 `fn(∅: ptr<char const>, ...) -> int` (static printf)) ∅)
   (function-definition
      (main~1 `fn(argc: int, argv: ptr<ptr<char>>) -> int` (static main))
      (params
         (argc~2 `int` @0)
         (argv~3 `ptr<ptr<char>>` @8))
      (compound-statement
         (return
            (call `int` @16
               (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>` @24
                  (printf~0 `fn(∅: ptr<char const>, ...) -> int` (static printf)))
               (noop-type-conversion `ptr<char const>` @32
                  (deref `ptr<char>` @32
                     (ptr-add `ptr<ptr<char>>` @40
                        (argv~3 `ptr<ptr<char>>` @8)
                        (sign-extend `unsigned long` @48 (1 `int` @56)))))
               (argc~2 `int` @0))))))

----- stderr -----
